// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PastOrder /> should render component 1`] = `
<tr>
  <td>
    2018-05-20T10:59:00.000+01:00
    - 2018-05-20T10:59:00.000+01:00
  </td>
  <td>
    <p>
      new drug
      :
       0
       drops,
       twice a week,
       reactally, for 
      0
       weeks
    </p>
  </td>
</tr>
`;

exports[`<PastOrder /> should render details 1`] = `
<tr>
  <td>
    2018-05-20T10:59:00.000+01:00
    - 2018-05-20T10:59:00.000+01:00
  </td>
  <td>
    <p>
      new drug
      :
    </p>
  </td>
</tr>
`;
